# data_sienc_visuel

./: .gitignore  big.env  docker-compose.yml  pyproject.toml
data2/loaded_xml/: seaved_xml.pkl
data2/pickle/snips/: A16652000130.pkl  A16831100030.pkl  A16931110019.pkl  A17081110019.pkl  A17362200019.pkl  A17441704719.pkl  A17481110019.pkl  A17681704840.pkl  A17851110019.pkl  A17881704940.pkl  A17931115019.pkl  A17931120019.pkl  A18160400040.pkl  A18231110040.pkl  A18251110019.pkl  A18281705040.pkl  (+70 more)
data2/xml/: B20240913905.xml  B20240916405.xml  C20240912460.xml  C20240912860.xml  C20240912960.xml  C20240913160.xml  C20240913560.xml  C20240913660.xml  C20240913760.xml  C20240913809.xml  C20240914009.xml  C20240914109.xml  C20240914209.xml  C20240914409.xml  C20240914509.xml  C20240914609.xml  C20240914709.xml  C20240914860.xml  C20240915160.xml  C20240915560.xml  C20240915660.xml  W20240912325.xml  W20240912525.xml  W20240912625.xml  W20240912725.xml  W20240913025.xml  W20240913225.xml  W20240913325.xml  W20240913425.xml  W20240914325.xml  W20240914925.xml  W20240915025.xml  W20240915225.xml  W20240915325.xml  W20240915425.xml  W20240915725.xml  W20240915825.xml  W20240915925.xml  W20240916025.xml  W20240916125.xml  (+12 more)
data_sienc_visuel/: Lecture2-1_Series.ipynb  Lecture2-2_DataFrame.ipynb  Lecture2-3_MissingValues.ipynb  Lecture2-4_Fortune500.ipynb  RAPTOR.ipynb  calculating.ipynb  data.json  pdfloadpipe.ipynb  raptorTest.ipynb  retsinfo.ipynb  test.ipynb
data_sienc_visuel/scripts/: calulate.py  print_pdf.py  snipPdf.py
tests/: test2.ipynb  test3.ipynb
