[tool.poetry]
name = "data-sienc-visuel"
version = "0.1.0"
description = ""
authors = ["jmsaRuc <jmsa@ruc.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyterlab = "^4.1.2"
notebook = "^7.1.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
numpy = "^1.26.4"
chardet = "^5.2.0"
seaborn = "^0.13.2"
alive-progress = "^3.1.5"
langchain = "^0.1.14"
umap-learn = "^0.5.5"
scikit-learn = "^1.4.1.post1"
langchain-community = "^0.0.31"
tiktoken = "^0.6.0"
langchain-openai = "^0.1.1"
langchainhub = "^0.1.15"
chromadb = "^0.4.24"
langchain-anthropic = "^0.1.4"
unstructured = "^0.13.0"
tables = "^3.9.2"
sentence-transformers = "^2.6.1"
langsmith = "^0.1.39"
duckduckgo-search = "^5.2.2"
about-time = "^4.2.1"
python-magic-bin = "^0.4.14"
matplotlib = "^3.8.4"
selenium = "^4.19.0"
pdfkit = "^1.0.0"
pypdf = "^4.2.0"
webdriver-manager = "^4.0.1"
regex = "^2024.5.15"
pdfminer-six = "^20231228"
neo4j = "^5.20.0"
setuptools = "^70.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
